--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -42,5 +42,5 @@
 <span class="p-2 fs-3" ><a href="{{ profile.web_site }}"><i class="fab fa-linkedin "></i> </a></span>
 <span class="p-2 fs-3" ><a href="{{ profile.web_site }}"><i class="fab fa-instagram "></i> </a></span>
 <hr>
-<span class="copy-riaght ">All Right Reserve to hamzoooz &copy; {{ date }}</span>
+<span class="copy-riaght ">All Right Reserve to shopeyblack &copy; {{ date }}</span>
 </div>
