--- a/templates/inc/nav.html
+++ b/templates/inc/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light " style="min-width: 390px;">
   <div class="container d-flex justify-content-between  ">
     
-    <a class="navbar-brand " href="#">Book Hope</a>
+    <a class="navbar-brand " href="#">Shopeyblack</a>
     
     {% comment %} Search Sections  {% endcomment %}
     <div class="search-btn search-bar "  style="width:40%" >
