--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -7,7 +7,7 @@
 
 <div class="container d-flex  ">
     <div class="py-1 bg-secondary1  d-flex align-items-center ">
-        <a href="{% url '/' %}" class="text-secondary  p-2 "><i class="fa fa-home"></i> </a><i class="fa fa-caret-right text-secondary  "></i>
+        <a href="{% url 'index' %}" class="text-secondary  p-2 "><i class="fa fa-home"></i> </a><i class="fa fa-caret-right text-secondary  "></i>
         <a href="#" class="text-secondary  p-2"> Collections  </a> <i class="fa fa-caret-right text-secondary  "></i>
         <a href="#" class="text-secondary  p-2 "> {{books.category.name}}  </a> <i class="fa fa-caret-right text-secondary  "></i>
         <span class="text-secondary  p-2 "> {{books.title}}  </span>
