--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -27,10 +27,10 @@
                                     {% if books.selling_price > 0 %}
                                         <input type="hidden"  value="{{ books.id }}" class="book_id" >
                                         {% csrf_token %}
-                                        <div  class="btn btn-warning  w-100 mt-2 addToCartBtn "> <i class="fa fa-shopping-cart"></i> Add to Card </div></a>
+                                        <a href="{{ book.url }}" ><div  class="btn btn-warning  w-100 mt-2 addToCartBtn "> <i class="fa fa-shopping-cart"></i> Add to Card </div></a>
                                         {% comment %} <a href="{book.url}" ><a href="#" class="btn btn-success w-100 mt-2 "> <i class="fa fa-eye"></i> Free Sampll </a> {% endcomment %}
                                     {% else %}
-                                    <div  class="btn btn-warning  w-100 mt-2 addToCartBtn "> <i class="fa fa-shopping-cart"></i> Add to Card </div></a>
+                                    <a href="{{ book.url }}" ><div  class="btn btn-warning  w-100 mt-2 addToCartBtn "> <i class="fa fa-shopping-cart"></i> Add to Card </div></a>
                                         {% comment %} <a download href="{{ books.file.url }}"><button class="btn btn-primary download-link download_link_to_increase w-100 mt-2 "  incres_number_of_download="{{ books.id }}" > <i class="fa fa-download"></i> download</button></a> {% endcomment %}
                                         {% comment %} <a href="{{ books.file.url }}"><button class="btn btn-success mt-3 w-100 mt-2 "> <i class="fa fa-eye"></i> Read</button></a> {% endcomment %}
                                     {% endif %}
